[gd_scene load_steps=25 format=3 uid="uid://dk1swsw51lew3"]

[ext_resource type="Script" path="res://Scripts/to_game.gd" id="1_07yxd"]
[ext_resource type="Shader" path="res://main.gdshader" id="1_qu003"]
[ext_resource type="Texture2D" uid="uid://dpibucf8l5485" path="res://bgm4.png" id="2_x7ksk"]
[ext_resource type="FontFile" uid="uid://du26a2te3yqen" path="res://fonts/Exo_2/static/Exo2-Black.ttf" id="3_qj1m5"]
[ext_resource type="Texture2D" uid="uid://coyfqyjjpvkwk" path="res://Icons/tempo.png" id="4_h5rht"]
[ext_resource type="Texture2D" uid="uid://dbkl3lr1bocq5" path="res://Icons/tempo_pressed.png" id="5_chvs8"]
[ext_resource type="Texture2D" uid="uid://b235qa3nhqnri" path="res://Icons/casa.png" id="6_7pfu1"]
[ext_resource type="Texture2D" uid="uid://dndh1pptcod1l" path="res://Icons/casa_pressed.png" id="7_kyuw0"]
[ext_resource type="Texture2D" uid="uid://dctk7ko0ppfh5" path="res://Icons/trofeo.png" id="8_c105t"]
[ext_resource type="Texture2D" uid="uid://cgywo40j3n6ha" path="res://Icons/trofeo_pressed.png" id="9_4a1p2"]
[ext_resource type="VideoStream" path="res://Anim/SALUDO.ogv" id="10_mknbg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1d1g3"]
shader = ExtResource("1_qu003")
shader_parameter/direction = Vector2(1, 1)
shader_parameter/speed_scale = 0.05

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61uu2"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.972549)
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2ie1"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.972549)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fywq2"]
bg_color = Color(0.74902, 0.74902, 0.74902, 0.705882)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rqlbw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i22mx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fuc7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5hngi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2o3mi"]

[sub_resource type="Theme" id="Theme_fcgga"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_rqlbw")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_i22mx")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_1fuc7")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_5hngi")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_2o3mi")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n53kh"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pxwb"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8tx1"]
bg_color = Color(0, 0, 0, 0.937255)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ToGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07yxd")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.733333, 0.631373, 1)

[node name="TextureRect" type="TextureRect" parent="bg"]
material = SubResource("ShaderMaterial_1d1g3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x7ksk")
stretch_mode = 1

[node name="Panel" type="Panel" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -176.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_61uu2")

[node name="RutinasLabel" type="RichTextLabel" parent="bg/TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 24.0
offset_right = -183.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_qj1m5")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[shake amp=100 freq=5] RUTINAS[/shake]"
scroll_active = false

[node name="RutinasButton" type="TextureButton" parent="bg/TextureRect/Panel"]
layout_mode = 0
offset_left = 56.0
offset_top = 36.0
offset_right = 123.0
offset_bottom = 103.0
texture_normal = ExtResource("4_h5rht")
texture_pressed = ExtResource("5_chvs8")
ignore_texture_size = true
stretch_mode = 0

[node name="CasaLabel" type="RichTextLabel" parent="bg/TextureRect/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.5
offset_top = -68.0
offset_right = 50.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_qj1m5")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[shake amp=100 freq=5] CASA[/shake]"
scroll_active = false

[node name="LogrosLabel" type="RichTextLabel" parent="bg/TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 178.5
offset_top = 18.5
offset_right = 345.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_qj1m5")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[shake amp=100 freq=5] LOGROS[/shake]"
scroll_active = false

[node name="CasaButton" type="TextureButton" parent="bg/TextureRect/Panel"]
layout_mode = 0
offset_left = 326.0
offset_top = 36.0
offset_right = 393.0
offset_bottom = 103.0
texture_normal = ExtResource("6_7pfu1")
texture_pressed = ExtResource("7_kyuw0")
ignore_texture_size = true
stretch_mode = 0

[node name="LogrosButton" type="TextureButton" parent="bg/TextureRect/Panel"]
layout_mode = 0
offset_left = 579.0
offset_top = 36.0
offset_right = 646.0
offset_bottom = 103.0
texture_normal = ExtResource("8_c105t")
texture_pressed = ExtResource("9_4a1p2")
ignore_texture_size = true
stretch_mode = 0

[node name="Panel2" type="Panel" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1282.0
offset_bottom = -1106.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_c2ie1")

[node name="Label2" type="Label" parent="bg/TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -33.5
offset_right = 139.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("3_qj1m5")
theme_override_font_sizes/font_size = 55
text = "Ejercicios"

[node name="Panel3" type="Panel" parent="bg/TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -462.0
offset_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fywq2")

[node name="ScrollContainer" type="ScrollContainer" parent="bg/TextureRect/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fcgga")
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="bg/TextureRect/Panel3/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Button" type="Button" parent="bg/TextureRect/Panel3/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_qj1m5")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_n53kh")
theme_override_styles/hover = SubResource("StyleBoxFlat_5pxwb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t8tx1")
text = "  ¿QUIERE JUGAR
  UNA SESIÓN DE   
  PIRIRUNNER?

  ¡APRIETA AQUÍ"
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="bg/TextureRect/Panel3/ScrollContainer/VBoxContainer/Button"]
layout_mode = 0
offset_left = 254.0
offset_top = 61.0
offset_right = 589.0
offset_bottom = 251.0
stream = ExtResource("10_mknbg")
autoplay = true
expand = true
loop = true

[connection signal="pressed" from="bg/TextureRect/Panel/RutinasButton" to="." method="_on_rutinas_button_pressed"]
[connection signal="pressed" from="bg/TextureRect/Panel/CasaButton" to="." method="_on_casa_button_pressed"]
[connection signal="pressed" from="bg/TextureRect/Panel/LogrosButton" to="." method="_on_logros_button_pressed"]
[connection signal="pressed" from="bg/TextureRect/Panel3/ScrollContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
